# gecko-vision-gate

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT_PLAN.md  README.md  pyproject.toml
.codex/: hooks.json
datasets/: README.md  crawl_queries.json  manifest.csv  source_metadata.csv
datasets/coco/annotations/: test.json  train.json  val.json
docs/: GOOGLE_HARDCASE_CRAWLING_DESIGN.md  LEARNINGS.md  MODEL_AND_TRAINING_PLAN.md  NEGATIVE_DATA_GUIDELINE.md
reports/: R0001-negative-expansion-v1.md  README.md  TEMPLATE.md
scripts/: autolabel.py  build_manifest.py  check_dataset.py  eval_gate.py  export_to_label_studio.py  extract_operational_frames.py  fetch_hardcase_images.py  fetch_r2_clips.py  import_label_studio_operational.py  import_roboflow_coco.py  promote_staging.py  train_gecko_detector.py
specs/: architecture.md
src/gecko_vision_gate/: __init__.py  coco_import.py  detector.py  frame_sampling.py  hardcase_fetch.py  prelabel.py  schema.py
tests/: test_coco_import.py  test_frame_sampling.py  test_hardcase_fetch.py  test_schema.py
